--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,8 @@ services:
     name: bible-semantic-search
     env: python
     buildCommand: pip install -r requirements.txt
-    startCommand: python main.py
+    startCommand: python app.py
     envVars:
-      - key: FLASK_ENV
-        value: production
+      - key: PYTHON_VERSION
+        value: 3.11
+    plan: free
