--- a/requirements.txt
+++ b/requirements.txt
@@ -29,6 +29,7 @@ packaging==25.0
 pillow==11.2.1
 pydantic==2.11.4
 pydantic_core==2.33.2
+python-dotenv==1.1.0
 PyYAML==6.0.2
 regex==2024.11.6
 requests==2.32.3
