--- a/render.yaml
+++ b/render.yaml
@@ -1,10 +1,10 @@
 services:
   - type: web
-    name: bible-semantic-search
+    name: bible-semantic-app
     env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: python app.py
+    buildCommand: "pip install -r requirements.txt"
+    startCommand: "python server.py"
+    plan: free
     envVars:
       - key: PYTHON_VERSION
-        value: 3.11
-    plan: free
+        value: 3.10
